feat: implement Interactive Scenario Inspector UI and dynamic variable resolver